<resources>
    <string name="app_name">Nutrilens</string>
    <string name="message_welcome_page">Inovasi Kesehatan: Memberdayakan Masyarakat Rentan untuk Kesehatan dan Kesejahteraan</string>
    <string name="logout">Keluar</string>
    <string name="gallery">Galeri</string>
    <string name="logout_message">Yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="success_dialog_message">Akun dengan %1$s sudah jadi nih. Yuk Kita Masuk Ke Aplikasi.</string>
    <string name="success_dialog_title">Yeah!</string>
    <string name="success_dialog_button">Lanjut</string>
    <string name="registration_failed">Registrasi Gagal</string>
    <string name="failure_dialog_title">"Oh tidak!"</string>
    <string name="try_again">Silahkan coba lagi.</string>
    <string name="failure_dialog_button">Registrasi Ulang</string>
    <string name="login_success">Login Berhasil</string>
    <string name="login_failed">Login Gagal</string>
    <string name="info">info</string>
    <string name="user_avatar">user_avatar</string>
    <string name="profile_image">profile_image</string>
    <string name="menu_image">menu_image</string>
    <string name="close">Tutup</string>
    <string name="flash">Flash</string>
    <string name="capture">Foto</string>
    <string name="makanan_image_desc">makanan_image_desc</string>
    <string name="lunch">Makan Siang</string>
    <string name="dinner">Makan Malam</string>
    <string name="breakfast">Makan Pagi</string>
    <string name="translate">Bahasa</string>
    <string name="resepmain">Resep</string>
    <string name="add_drink">Tambah Minuman</string>
    <string name="satu_gelas_setara_dengan_200_ml_air">Satu gelas setara dengan 200 ml air.</string>
    <string name="minum_air_yang_cukup_sangat_penting_untuk_menjaga_kesehatan_tubuh_air_memiliki_banyak_manfaat_termasuk_menjaga_suhu_tubuh_melancarkan_pencernaan_mengangkut_nutrisi_dan_mengeluarkan_racun_dari_tubuh_namun_berapa_jumlah_air_yang_cukup_untuk_diminum_setiap_hari">Minum air yang cukup sangat penting untuk menjaga kesehatan tubuh. Air memiliki banyak manfaat, termasuk menjaga suhu tubuh, melancarkan pencernaan, mengangkut nutrisi, dan mengeluarkan racun dari tubuh. Namun, berapa jumlah air yang cukup untuk diminum setiap hari?</string>
    <string name="menurut_institute_of_medicine_iom_rekomendasi_jumlah_konsumsi_air_harian_adalah_sebagai_berikut">Menurut Institute of Medicine (IOM), rekomendasi jumlah konsumsi air harian adalah sebagai berikut:</string>
    <string name="_1_untuk_pria_sekitar_3_7_liter_13_gelas_per_hari">1. Untuk pria: sekitar 3.7 liter (13 gelas) per hari.</string>
    <string name="_2_untuk_wanita_sekitar_2_7_liter_9_gelas_per_hari">2. Untuk wanita: sekitar 2.7 liter (9 gelas) per hari.</string>
    <string name="faktor_faktor_yang_mempengaruhi_kebutuhan_air">Faktor-faktor yang Mempengaruhi Kebutuhan Air:</string>
    <string name="name_of_the_drink">Nama Minuman</string>
    <string name="_0_g">0 g</string>
    <string name="_0_ml">0 ml</string>
    <string name="placeholder_food_name">Bakso Urat</string>
    <string name="placeholder_450_kcal">450 Kcal</string>
    <string name="placeholder_carbs_14g_fat_14g_protein_14g">Karbohidrat: 14g, Lemak: 14g, Protein: 14g</string>
    <string name="placeholder_carbs_60_fat_14_protein_26">Karbohidrat: 60%, Lemak: 14%, Protein: 26%</string>
    <string name="info_steps">Info Langkah</string>
    <string name="jumlah_langkah_kaki_yang_cukup_dan_bagus_untuk_tubuh">Jumlah Langkah Kaki yang Cukup dan Bagus untuk Tubuh</string>
    <string name="berjalan_kaki_adalah_salah_satu_bentuk_aktivitas_fisik_yang_mudah_dilakukan_dan_memiliki_banyak_manfaat_bagi_kesehatan_dengan_berjalan_kaki_secara_rutin_anda_dapat_meningkatkan_kesehatan_jantung_mengontrol_berat_badan_serta_memperbaiki_suasana_hati_dan_energi_namun_berapa_jumlah_langkah_yang_cukup_dan_bagus_untuk_tubuh">Berjalan kaki adalah salah satu bentuk aktivitas fisik yang mudah dilakukan dan memiliki banyak manfaat bagi kesehatan. Dengan berjalan kaki secara rutin, Anda dapat meningkatkan kesehatan jantung, mengontrol berat badan, serta memperbaiki suasana hati dan energi. Namun, berapa jumlah langkah yang cukup dan bagus untuk tubuh?</string>
    <string name="penelitian_menunjukkan_bahwa_berjalan_setidaknya_10_000_langkah_per_hari_dapat_memberikan_manfaat_kesehatan_yang_signifikan_angka_ini_setara_dengan_sekitar_8_kilometer_atau_5_mil_namun_beberapa_studi_juga_menunjukkan_bahwa_bahkan_berjalan_sekitar_7_000_langkah_per_hari_sudah_cukup_untuk_memberikan_manfaat_kesehatan_yang_berarti">Penelitian menunjukkan bahwa berjalan setidaknya 10.000 langkah per hari dapat memberikan manfaat kesehatan yang signifikan. Angka ini setara dengan sekitar 8 kilometer atau 5 mil. Namun, beberapa studi juga menunjukkan bahwa bahkan berjalan sekitar 7.000 langkah per hari sudah cukup untuk memberikan manfaat kesehatan yang berarti.</string>
    <string name="manfaat_berjalan_kaki">Manfaat Berjalan Kaki:</string>
    <string name="_1_meningkatkan_kesehatan_jantung_berjalan_kaki_secara_rutin_dapat_membantu_menurunkan_risiko_penyakit_jantung_dan_stroke_dengan_memperbaiki_sirkulasi_darah_dan_menurunkan_tekanan_darah">1. Meningkatkan Kesehatan Jantung: Berjalan kaki secara rutin dapat membantu menurunkan risiko penyakit jantung dan stroke dengan memperbaiki sirkulasi darah dan menurunkan tekanan darah.</string>
    <string name="_2_mengontrol_berat_badan_berjalan_kaki_membantu_membakar_kalori_dan_mengurangi_lemak_tubuh_sehingga_membantu_dalam_mengontrol_berat_badan">2. Mengontrol Berat Badan: Berjalan kaki membantu membakar kalori dan mengurangi lemak tubuh, sehingga membantu dalam mengontrol berat badan.</string>
    <string name="_3_memperbaiki_suasana_hati_aktivitas_fisik_seperti_berjalan_kaki_dapat_meningkatkan_produksi_hormon_endorfin_yang_membantu_memperbaiki_suasana_hati_dan_mengurangi_stres">3. Memperbaiki Suasana Hati: Aktivitas fisik seperti berjalan kaki dapat meningkatkan produksi hormon endorfin yang membantu memperbaiki suasana hati dan mengurangi stres.</string>
    <string name="_4_meningkatkan_energi_berjalan_kaki_dapat_meningkatkan_energi_dengan_meningkatkan_aliran_darah_dan_oksigen_ke_seluruh_tubuh">4. Meningkatkan Energi: Berjalan kaki dapat meningkatkan energi dengan meningkatkan aliran darah dan oksigen ke seluruh tubuh.</string>
    <string name="tips_untuk_menambah_jumlah_langkah_harian">Tips untuk Menambah Jumlah Langkah Harian:</string>
    <string name="_1_gunakan_tangga_daripada_lift_atau_eskalator">1. Gunakan tangga daripada lift atau eskalator.</string>
    <string name="_2_parkir_kendaraan_lebih_jauh_dari_pintu_masuk_tujuan_anda">2. Parkir kendaraan lebih jauh dari pintu masuk tujuan Anda.</string>
    <string name="_3_luangkan_waktu_untuk_berjalan_jalan_singkat_selama_istirahat_kerja_atau_setelah_makan_siang">3. Luangkan waktu untuk berjalan-jalan singkat selama istirahat kerja atau setelah makan siang.</string>
    <string name="_4_gunakan_aplikasi_penghitung_langkah_untuk_memantau_aktivitas_fisik_harian_anda_dan_menetapkan_tujuan">4. Gunakan aplikasi penghitung langkah untuk memantau aktivitas fisik harian Anda dan menetapkan tujuan.</string>
    <string name="_5_ajak_teman_atau_keluarga_untuk_berjalan_bersama_sehingga_lebih_menyenangkan_dan_menjadi_kebiasaan">5. Ajak teman atau keluarga untuk berjalan bersama sehingga lebih menyenangkan dan menjadi kebiasaan.</string>
    <string name="dengan_menambahkan_lebih_banyak_langkah_ke_dalam_rutinitas_harian_anda_anda_dapat_mencapai_gaya_hidup_yang_lebih_sehat_dan_aktif_mulailah_dengan_target_yang_realistis_dan_tingkatkan_secara_bertahap_sesuai_kemampuan_anda">Dengan menambahkan lebih banyak langkah ke dalam rutinitas harian Anda, Anda dapat mencapai gaya hidup yang lebih sehat dan aktif. Mulailah dengan target yang realistis dan tingkatkan secara bertahap sesuai kemampuan Anda.</string>
    <string name="info_sleep">Info Tidur</string>
    <string name="sleep_count_press_the_button_to_choose_what_hour_you_awake">Hitungan tidur\nTekan tombol untuk memilih jam berapa Anda bangun</string>
    <string name="set_sleep_time">Atur Waktu Tidur</string>
    <string name="informasi_tidur_yang_cukup">Informasi Tidur yang Cukup</string>
    <string name="tidur_yang_cukup_sangat_penting_untuk_menjaga_kesehatan_tubuh_orang_dewasa_disarankan_untuk_tidur_antara_7_9_jam_setiap_malam_berikut_adalah_beberapa_informasi_mengenai_pentingnya_tidur_dan_tips_untuk_mendapatkan_tidur_yang_berkualitas">Tidur yang cukup sangat penting untuk menjaga kesehatan tubuh. Orang dewasa disarankan untuk tidur antara 7-9 jam setiap malam. Berikut adalah beberapa informasi mengenai pentingnya tidur dan tips untuk mendapatkan tidur yang berkualitas.</string>
    <string name="manfaat_tidur_yang_cukup">Manfaat Tidur yang Cukup</string>
    <string name="_1_memperbaiki_fungsi_otak_tidur_membantu_memperkuat_ingatan_dan_meningkatkan_konsentrasi_serta_produktivitas">1. Memperbaiki fungsi otak: Tidur membantu memperkuat ingatan dan meningkatkan konsentrasi serta produktivitas.</string>
    <string name="_2_meningkatkan_kesehatan_mental_tidur_yang_cukup_dapat_membantu_mengurangi_risiko_gangguan_mental_seperti_depresi_dan_kecemasan">2. Meningkatkan kesehatan mental: Tidur yang cukup dapat membantu mengurangi risiko gangguan mental seperti depresi dan kecemasan.</string>
    <string name="_3_meningkatkan_sistem_kekebalan_tubuh_tidur_yang_cukup_dapat_memperkuat_sistem_kekebalan_tubuh_sehingga_tubuh_lebih_tahan_terhadap_penyakit">3. Meningkatkan sistem kekebalan tubuh: Tidur yang cukup dapat memperkuat sistem kekebalan tubuh, sehingga tubuh lebih tahan terhadap penyakit.</string>
    <string name="tips_untuk_mendapatkan_tidur_yang_berkualitas">Tips untuk Mendapatkan Tidur yang Berkualitas</string>
    <string name="_1_cobalah_untuk_tidur_dan_bangun_pada_waktu_yang_sama_setiap_hari">1. Cobalah untuk tidur dan bangun pada waktu yang sama setiap hari.</string>
    <string name="_2_hindari_konsumsi_kafein_dan_makanan_berat_sebelum_tidur">2. Hindari konsumsi kafein dan makanan berat sebelum tidur.</string>
    <string name="_3_buatlah_suasana_tidur_yang_nyaman_seperti_mematikan_lampu_dan_menjaga_suhu_ruangan_yang_sejuk">3. Buatlah suasana tidur yang nyaman, seperti mematikan lampu dan menjaga suhu ruangan yang sejuk.</string>
    <string name="_4_hindari_penggunaan_gadget_sebelum_tidur_karena_cahaya_biru_dapat_mengganggu_kualitas_tidur">4. Hindari penggunaan gadget sebelum tidur karena cahaya biru dapat mengganggu kualitas tidur.</string>
    <string name="_5_lakukan_aktivitas_fisik_secara_teratur_untuk_membantu_tubuh_lebih_mudah_tidur_pada_malam_hari">5. Lakukan aktivitas fisik secara teratur untuk membantu tubuh lebih mudah tidur pada malam hari.</string>
    <string name="_6_hindari_tidur_siang_terlalu_lama_agar_tidak_mengganggu_tidur_malam">6. Hindari tidur siang terlalu lama agar tidak mengganggu tidur malam.</string>
    <string name="_7_jika_sulit_tidur_cobalah_teknik_relaksasi_seperti_meditasi_atau_pernapasan_dalam_sebelum_tidur">7. Jika sulit tidur, cobalah teknik relaksasi seperti meditasi atau pernapasan dalam sebelum tidur.</string>
    <string name="_8_pastikan_kasur_dan_bantal_anda_nyaman_dan_mendukung_postur_tubuh_yang_baik_selama_tidur">8. Pastikan kasur dan bantal Anda nyaman dan mendukung postur tubuh yang baik selama tidur.</string>
    <string name="mengikuti_tips_ini_dapat_membantu_anda_mendapatkan_tidur_yang_berkualitas_dan_menjaga_kesehatan_tubuh_secara_keseluruhan_pastikan_untuk_menjaga_pola_tidur_yang_konsisten_dan_hindari_kebiasaan_yang_dapat_mengganggu_tidur_anda">Mengikuti tips ini dapat membantu Anda mendapatkan tidur yang berkualitas dan menjaga kesehatan tubuh secara keseluruhan. Pastikan untuk menjaga pola tidur yang konsisten dan hindari kebiasaan yang dapat mengganggu tidur Anda.</string>
    <string name="steps_info_image">Step info Image</string>
</resources>