<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">

        <!-- Background Hijau -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/header_background"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_dicoding"
                android:layout_width="212dp"
                android:layout_height="63dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/info_sleep"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="92dp"
                android:fontFamily="@font/roboto_black"
                android:text="NutriLens"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_dicoding"
                app:layout_constraintTop_toBottomOf="@+id/tv_dicoding" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ScrollView for content -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clockTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="16dp"
                    android:text="@string/sleep_count_press_the_button_to_choose_what_hour_you_awake"
                    android:textAlignment="center"
                    android:textColor="#36383A"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/scheduleButton"
                    android:layout_width="367dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/set_sleep_time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/informasi_tidur_yang_cukup"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tidur_yang_cukup_sangat_penting_untuk_menjaga_kesehatan_tubuh_orang_dewasa_disarankan_untuk_tidur_antara_7_9_jam_setiap_malam_berikut_adalah_beberapa_informasi_mengenai_pentingnya_tidur_dan_tips_untuk_mendapatkan_tidur_yang_berkualitas" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/manfaat_tidur_yang_cukup"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_1_memperbaiki_fungsi_otak_tidur_membantu_memperkuat_ingatan_dan_meningkatkan_konsentrasi_serta_produktivitas" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_2_meningkatkan_kesehatan_mental_tidur_yang_cukup_dapat_membantu_mengurangi_risiko_gangguan_mental_seperti_depresi_dan_kecemasan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_3_meningkatkan_sistem_kekebalan_tubuh_tidur_yang_cukup_dapat_memperkuat_sistem_kekebalan_tubuh_sehingga_tubuh_lebih_tahan_terhadap_penyakit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tips_untuk_mendapatkan_tidur_yang_berkualitas"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_1_cobalah_untuk_tidur_dan_bangun_pada_waktu_yang_sama_setiap_hari" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_2_hindari_konsumsi_kafein_dan_makanan_berat_sebelum_tidur" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_3_buatlah_suasana_tidur_yang_nyaman_seperti_mematikan_lampu_dan_menjaga_suhu_ruangan_yang_sejuk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_4_hindari_penggunaan_gadget_sebelum_tidur_karena_cahaya_biru_dapat_mengganggu_kualitas_tidur" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_5_lakukan_aktivitas_fisik_secara_teratur_untuk_membantu_tubuh_lebih_mudah_tidur_pada_malam_hari" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_6_hindari_tidur_siang_terlalu_lama_agar_tidak_mengganggu_tidur_malam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_7_jika_sulit_tidur_cobalah_teknik_relaksasi_seperti_meditasi_atau_pernapasan_dalam_sebelum_tidur" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/_8_pastikan_kasur_dan_bantal_anda_nyaman_dan_mendukung_postur_tubuh_yang_baik_selama_tidur" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/mengikuti_tips_ini_dapat_membantu_anda_mendapatkan_tidur_yang_berkualitas_dan_menjaga_kesehatan_tubuh_secara_keseluruhan_pastikan_untuk_menjaga_pola_tidur_yang_konsisten_dan_hindari_kebiasaan_yang_dapat_mengganggu_tidur_anda" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
