<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/drinkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name_of_the_drink"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/drinkAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0_ml"
        android:textColor="#FFA500"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/drinkSugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#FF6347"
        android:gravity="center"
        android:text="@string/_0_g"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>